--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 autocarter @ git+https://github.com/iiiii7d/autocarter
-niquests
+gatelogue-types @ git+https://github.com/mrt-map/gatelogue#subdirectory=gatelogue-types-py
 vector
