--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,6 +8,9 @@ on:
 permissions:
   contents: write
 
+env:
+  TTY_COMPATIBLE: 1
+
 concurrency:
   group: ${{ github.workflow }}
   cancel-in-progress: true
@@ -20,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5 
         with:
-          python-version: '3.12' 
+          python-version: '3.13' 
       - run: pip install -Ur requirements.txt
       - run: python scripts/build.py
       - run: echo "message=update @ $(date +%Y%m%dT%H:%M:%S%Z)" >> "$GITHUB_ENV"
