--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,11 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>mrt-map/renovate-config:no-dev"
+  ],
+  "packageRules": [
+    {
+      "matchPackageNames": ["gatelogue-types"],
+      "extends": [":pinOnlyDevDependencies"]
+    }
   ]
 }
